# localflow

./: README.md  build-setup.bat  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.bat  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cleanup.rs  db.rs  earcon.rs  hook.rs  inject.rs  lib.rs  llm.rs  main.rs  pipeline.rs  whisper.rs
src-tauri/whisper-rs-sys-patched/: build.rs  wrapper.h
src-tauri/whisper-rs-sys-patched/src/: bindings.rs
src/lib/: ipc.ts  store.ts
src/routes/: About.tsx  Dashboard.tsx  Dictionary.tsx  History.tsx  LLMSettings.tsx  Models.tsx  Notes.tsx  Settings.tsx  Shortcuts.tsx
src/styles/: globals.css
src/windows/: MicBubble.tsx
